src/objects/DocuSign_Templates__mdt.object
<CustomObject>
    <description>Used to store DocuSign templates configuration for each object: Opportunity/Account</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Message__c</fullName>
        <label>Email Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                    <default>true</default>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CA_Opportunity</fullName>
                    <default>true</default>
                    <label>CA_Opportunity</label>
                </value>
                <value>
                    <fullName>EMEA_CH_Opportunity</fullName>
                </value>
                <value>
                    <fullName>GB_Opportunity</fullName>
                </value>
                <value>
                    <fullName>IE_Opportunity</fullName>
                </value>
                <value>
                    <fullName>US_Opportunity</fullName>
                </value>
                <value>
                    <fullName>CA_Payor</fullName>
                </value>
                <value>
                    <fullName>Business_Account</fullName>
                </value>
                <value>
                    <fullName>CA_Consumer</fullName>
                </value>
                <value>
                    <fullName>DE_Opportunity</fullName>
                </value>
                <value>
                    <fullName>GB_Consumer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Template_Id__c</fullName>
        <label>Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DocuSign Templates</label>
    <listViews>
        <fullName>CA_Opportunity_DocuSign_Templates</fullName>
        <columns>Template_Name__c</columns>
        <columns>DeveloperName</columns>
        <columns>Email_Message__c</columns>
        <columns>Email_Subject__c</columns>
        <columns>Template_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type__c</field>
            <operation>equals</operation>
            <value>CA_Opportunity</value>
        </filters>
        <label>CA Opportunity DocuSign Templates</label>
        <language>en_US</language>
        <sharedTo>
            <group>CA_Inside_Sales</group>
        </sharedTo>
    </listViews>
    <pluralLabel>DocuSign Templates</pluralLabel>
</CustomObject>